--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="first-slide" src="C:\Users\jolina.a.malgapo\Desktop\andrea\images\medical.jpg" style="width: 100% !important" alt="First slide">
+          <img class="first-slide" src="images\medical.jpg" style="width: 100% !important" alt="First slide">
 
         </div>
         <div class="carousel-item">
-          <img class="second-slide" src="C:\Users\jolina.a.malgapo\Desktop\andrea\images\23.jpg" style="width: 100% !important" alt="Second slide">
+          <img class="second-slide" src="images\23.jpg" style="width: 100% !important" alt="Second slide">
 
         </div>
         <div class="carousel-item">
-          <img class="third-slide" src="C:\Users\jolina.a.malgapo\Desktop\andrea\images\123.jpg" style="width: 100% !important" alt="Third slide">
+          <img class="third-slide" src="images\123.jpg" style="width: 100% !important" alt="Third slide">
           
         </div>
         <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
