--- a/about-us.html
+++ b/about-us.html
@@ -5,18 +5,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<link rel="icon" href="../../../../favicon.ico">
 
 	<title>About Us</title>
 
 
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="css/app.css">
 </head>
 <body>
-
 	<header>
-		<nav class="navbar navbar-expand-md navbar-light fixed-top bg-primary">
+		<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
 			<a class="navbar-brand" href="index.html">Healthcare System</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -26,66 +26,116 @@
 					<li class="nav-item active">
 						<a class="nav-link" href="about-us.html">About Us <span class="sr-only">(current)</span></a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item active">
 						<a class="nav-link" href="ds.html">Departments and Services</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item active">
 						<a class="nav-link disabled" href="contact.html">Contact Us</a>
 					</li>
 				</ul>
 				<form class="form-inline mt-2 mt-md-0">
 					<input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+					<button class="btn btn-btn-info my-2 my-sm-0" type="submit">Search</button>
 				</form>
 			</div>
 		</nav>
 	</header>
 
-
-	<div class="row">
-		<div class="col-md-12">
-			<img class="img-responsive" src="images\t.png" style="width: 100% !important" >
-		</div> <!-- / col md 12 -->
+	<div>
+		<div class="row">
+			<div class="col-md-12">
+				<img class="img-responsive" src="images\t.png" style="width: 100% !important" >
+			</div> <!-- / col md 12 -->
+		</div>
+		<br>
+		<br>
+		<br>
+		<br>
 	</div>
-	<br>
-	<br>
-	<br>
-	<br>
-
 	<div>
 		<div class="container">
-			<div class="row">
-				<div class="col-md-4 text-center">
-					<h1>PROFILE</h1>
-					<p>
-						"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet facilisis augue, ac tincidunt libero. Nulla vel nisi et nunc iaculis iaculis elementum at leo. Aliquam erat volutpat. Vivamus bibendum porta ex sed sagittis. Integer vitae neque finibus, efficitur quam in, varius nibh. Nulla bibendum feugiat nunc. Vivamus nec nulla et tellus tincidunt congue nec sed justo."
-					</p>
+			<div class="row row-eq-height">
+				<div class="col-sm-4 text-center">
+					<div class="w-100 p-3" style="background-color: #F6F9FA; height: 100%">
+						<h1>PROFILE</h1>
+						<p>
+							"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet facilisis augue, ac tincidunt libero. Nulla vel nisi et nunc iaculis iaculis elementum at leo. Aliquam erat volutpat. Vivamus bibendum porta ex sed sagittis. Integer vitae neque finibus, efficitur quam in, varius nibh. Nulla bibendum feugiat nunc. Vivamus nec nulla et tellus tincidunt congue nec sed justo."
+						</p>
+					</div>
 				</div>
-				<div class="col-md-4 text-center">
-					<h1>VISION</h1>
-					<p>
-						"Aliquam erat volutpat. Aliquam ac semper mi. Curabitur consectetur suscipit nunc vel semper. In vitae orci eget enim tristique lacinia. Sed eget ornare lectus, quis luctus quam. In magna nisl, accumsan vitae commodo ut, hendrerit tincidunt magna. Etiam faucibus at dui at feugiat. Praesent mauris est, elementum a eros eu, fermentum auctor velit. Sed ut fermentum nisi. Nullam rutrum nisl id feugiat ornare."
-					</p>
+				<div class="col-sm-4 text-center">
+					<div class="w-100 p-3" style="background-color: #F6F9FA; height: 100%">
+						<h1>VISION</h1>
+						<p>
+							"Aliquam erat volutpat. Aliquam ac semper mi. Curabitur consectetur suscipit nunc vel semper. In vitae orci eget enim tristique lacinia. Sed eget ornare lectus, quis luctus quam. In magna nisl, accumsan vitae commodo ut, hendrerit tincidunt magna. Etiam faucibus at dui at feugiat. Praesent mauris est, elementum a eros eu, fermentum auctor velit. Sed ut fermentum nisi. Nullam rutrum nisl id feugiat ornare."
+						</p>
+					</div>
 				</div>
-				<div class="col-md-4 text-center">
-					<h1>MISSION</h1>
-					<p>
-						"Praesent dapibus enim vestibulum sapien sagittis, nec consectetur eros lacinia. Ut vestibulum sit amet urna sit amet aliquet. Vivamus nec odio eget sapien elementum cursus eu ullamcorper felis. Aliquam semper lacus in diam dictum mollis. Donec laoreet leo quis fringilla malesuada. Integer tincidunt varius nibh eu convallis. Pellentesque ante dui, lacinia ac commodo sed, placerat id elit. Pellentesque mattis posuere eros non scelerisque. Maecenas mattis, risus quis aliquet posuere, diam mi facilisis metus, sed vestibulum odio est quis quam. Donec quis est venenatis, tincidunt nisl vel, hendrerit nibh. Suspendisse tempor tempor urna ut luctus. Proin elit enim, tincidunt sed semper quis, sagittis ut sapien. Donec lobortis interdum magna quis bibendum. Nunc vel vestibulum enim."
-					</p>
+				<div class="col-sm-4 text-center">
+					<div class="w-100 p-3" style="background-color: #F6F9FA; height: 100%">
+						<h1>MISSION</h1>
+						<p>
+							"Praesent dapibus enim vestibulum sapien sagittis, nec consectetur eros lacinia. Ut vestibulum sit amet urna sit amet aliquet. Vivamus nec odio eget sapien elementum cursus eu ullamcorper felis. Aliquam semper lacus in diam dictum mollis. Donec laoreet leo quis fringilla malesuada. Integer tincidunt varius nibh eu convallis. Pellentesque ante dui, lacinia ac commodo sed, placerat id elit. Pellentesque mattis posuere eros non scelerisque. Maecenas mattis, risus quis aliquet posuere, diam mi facilisis metus, sed vestibulum odio est quis quam. Donec quis est venenatis, tincidunt nisl vel, hendrerit nibh. Suspendisse tempor tempor urna ut luctus. Proin elit enim, tincidunt sed semper quis, sagittis ut sapien. Donec lobortis interdum magna quis bibendum. Nunc vel vestibulum enim."
+						</p>
+					</div>
 				</div>
 			</div>
 		</div>
+	</div>
 
 
-		<!-- jQuery library -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<footer id="myFooter">
+	<hr class="featurette-divider">
+	<br>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-4 text-center">
+				<h5>HealthCare System</h5>
+				<p>
+					Building Number,Street
+					Subdivision, Baranggay
+					City,Province
+					Country, Zip Code
+				</p>
+			</div>
+			<div class="col-lg-4 text-center">
+				<p>Contact Number</p>
+				<p>Direct Line</p>
+				<p>Fax Number</p>
+			</div>
+			<div class="col-lg-4 text-center">
+				<div class="social-networks">
+					<a href="#" style="color: #48AAE6"><i class="fab fa-twitter fa-2x"></i></a> &nbsp;
+					<a href="#" style="color: #4267b2"><i class="fab fa-facebook-f fa-2x"></i></a> &nbsp;
+					<a href="#" style="color: #dd4b39"><i class="fab fa-google-plus-g fa-2x"></i></a>
+				</div>
+			</div>
+		</div>
+		<br>
+		<div class="mx-auto" style="width: 200px;">
+			<div class="footer-copyright">
+				<p>© 2016 Copyright Text </p>
+			</div>
+		</div>
+	</div>
+</footer>
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-		<!-- Popper JS -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
-		<!-- Latest compiled JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 
-	</body>
-	</html>
+</body>
+</html>
