--- a/ds.html
+++ b/ds.html
@@ -5,55 +5,228 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<link rel="icon" href="../../../../favicon.ico">
 
-	<title>About Us</title>
+	<title>DepartmentandServices</title>
 
 
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="css/app.css">
 </head>
 <body>
+	<div>
+		<header>
+			<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
+				<a class="navbar-brand" href="index.html">Healthcare System</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarCollapse">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item active">
+							<a class="nav-link" href="about-us.html">About Us <span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item active">
+							<a class="nav-link" href="ds.html">Departments and Services</a>
+						</li>
+						<li class="nav-item active">
+							<a class="nav-link disabled" href="contact.html">Contact Us</a>
+						</li>
+					</ul>
+					<form class="form-inline mt-2 mt-md-0">
+						<input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+						<button class="btn btn-btn-info my-2 my-sm-0" type="submit">Search</button>
+					</form>
+				</div>
+			</nav>
+		</header>
+	</div>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
 
-	<header>
-		<nav class="navbar navbar-expand-md navbar-light fixed-top bg-primary">
-			<a class="navbar-brand" href="index.html">Healthcare System</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarCollapse">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="about-us.html">About Us <span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="ds.html">Departments and Services</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link disabled" href="contact.html">Contact Us</a>
-					</li>
-				</ul>
-				<form class="form-inline mt-2 mt-md-0">
-					<input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-				</form>
+	<div class="container">
+		<h1>Department and Services</h1>
+		<br>
+		<br>
+
+		<!--START-->
+		<div class="row">
+			<div class="col-4">
+				
+					<div id="accordion">
+						<div class="list-group" id="list-tab" role="tablist">
+						<div class="card">
+							<div class="card-header" id="headingOne">
+								<h5 class="mb-0">
+									<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+										A
+									</button>
+								</h5>
+							</div>
+
+							<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+								<div class="card-body">
+									<a class="list-group-item list-group-item-action" id="list-A1-list" data-toggle="list" href="#list-A1" role="tab" aria-controls="A1">Department</a>
+									<a class="list-group-item list-group-item-action" id="list-A2-list" data-toggle="list" href="#list-A2" role="tab" aria-controls="A2">Department</a>
+									<a class="list-group-item list-group-item-action" id="list-A3-list" data-toggle="list" href="#list-A3" role="tab" aria-controls="A3">Department</a>
+									<a class="list-group-item list-group-item-action" id="list-A4-list" data-toggle="list" href="#list-A4" role="tab" aria-controls="A4">Department</a>
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<div class="card-header" id="headingTwo">
+								<h5 class="mb-0">
+									<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+										B
+									</button>
+								</h5>
+							</div>
+							<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+								<div class="card-body">
+									<a class="list-group-item list-group-item-action" id="list-B1-list" data-toggle="list" href="#list-B1" role="tab" aria-controls="B1">Department</a>
+									<a class="list-group-item list-group-item-action" id="list-B2-list" data-toggle="list" href="#list-B2" role="tab" aria-controls="B2">Department</a>
+									<a class="list-group-item list-group-item-action" id="list-B3-list" data-toggle="list" href="#list-B3" role="tab" aria-controls="B3">Department</a>
+									<a class="list-group-item list-group-item-action" id="list-B4-list" data-toggle="list" href="#list-B4" role="tab" aria-controls="B4">Department</a>
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<div class="card-header" id="headingThree">
+								<h5 class="mb-0">
+									<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+										C
+									</button>
+								</h5>
+							</div>
+							<div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+								<div class="card-body">
+									<a class="list-group-item list-group-item-action" id="list-C1-list" data-toggle="list" href="#list-C1" role="tab" aria-controls="C1">Department</a>
+									<a class="list-group-item list-group-item-action" id="list-C2-list" data-toggle="list" href="#list-C2" role="tab" aria-controls="C2">Department</a>
+									<a class="list-group-item list-group-item-action" id="list-C3-list" data-toggle="list" href="#list-C3" role="tab" aria-controls="C3">Department</a>
+									<a class="list-group-item list-group-item-action" id="list-C4-list" data-toggle="list" href="#list-C4" role="tab" aria-controls="C4">Department</a>
+								</div>
+							</div>
+						</div>
+						</div>
+					</div>
+
+				
+
 			</div>
-		</nav>
-	</header>
+			<div class="col-8">
+				<div class="tab-content" id="nav-tabContent">
+					<div class="tab-pane fade show active" id="list-A1" role="tabpanel" aria-labelledby="list-A1-list">Nulla tempor nisl a tellus molestie, vitae tempus erat tincidunt. Cras pharetra, odio nec tincidunt ultricies, purus enim fringilla risus, vel commodo tellus dui vehicula libero.</div>
+					<div class="tab-pane fade" id="list-A2" role="tabpanel" aria-labelledby="list-A2-list">Pellentesque quam lectus, aliquam quis ligula id, molestie pellentesque dolor. Suspendisse potenti. Sed lacinia, nisi non posuere finibus, magna justo euismod augue, vitae tincidunt massa enim nec lacus. Nullam dapibus aliquet luctus.</div>
+					<div class="tab-pane fade" id="list-A3" role="tabpanel" aria-labelledby="list-A3-list"> Phasellus auctor, odio vel cursus tempor, elit augue blandit elit, in porttitor enim ligula eget lectus. Donec vulputate tellus nec nisl blandit, nec rhoncus mi tincidunt. In tincidunt, metus eu fermentum eleifend, quam erat ultricies urna, ut ultrices est augue quis dui.</div>
+					<div class="tab-pane fade" id="list-A4" role="tabpanel" aria-labelledby="list-A4-list">Proin tempor diam a tortor tristique malesuada. Pellentesque sit amet justo vitae massa vestibulum rutrum faucibus et mi. In lobortis malesuada felis. Aliquam nec ante vel neque tempus lobortis eget id neque.</div>
+					<div class="tab-pane fade" id="list-B1" role="tabpanel" aria-labelledby="list-B1-list">Overview.......</div>
+					<div class="tab-pane fade" id="list-B2" role="tabpanel" aria-labelledby="list-B2-list">Pellentesque quam lectus, aliquam quis ligula id, molestie pellentesque dolor. Suspendisse potenti. Sed lacinia, nisi non posuere finibus, magna justo euismod augue, vitae tincidunt massa enim nec lacus. Nullam dapibus aliquet luctus.</div>
+					<div class="tab-pane fade" id="list-B3" role="tabpanel" aria-labelledby="list-B3-list"> Phasellus auctor, odio vel cursus tempor, elit augue blandit elit, in porttitor enim ligula eget lectus. Donec vulputate tellus nec nisl blandit, nec rhoncus mi tincidunt. In tincidunt, metus eu fermentum eleifend, quam erat ultricies urna, ut ultrices est augue quis dui.</div>
+					<div class="tab-pane fade" id="list-B4" role="tabpanel" aria-labelledby="list-B4-list">Proin tempor diam a tortor tristique malesuada. Pellentesque sit amet justo vitae massa vestibulum rutrum faucibus et mi. In lobortis malesuada felis. Aliquam nec ante vel neque tempus lobortis eget id neque.</div>
+					<div class="tab-pane fade" id="list-C1" role="tabpanel" aria-labelledby="list-C1-list">Nulla tempor nisl a tellus molestie, vitae tempus erat tincidunt. Cras pharetra, odio nec tincidunt ultricies, purus enim fringilla risus, vel commodo tellus dui vehicula libero.</div>
+					<div class="tab-pane fade" id="list-C2" role="tabpanel" aria-labelledby="list-C2-list">Pellentesque quam lectus, aliquam quis ligula id, molestie pellentesque dolor. Suspendisse potenti. Sed lacinia, nisi non posuere finibus, magna justo euismod augue, vitae tincidunt massa enim nec lacus. Nullam dapibus aliquet luctus.</div>
+					<div class="tab-pane fade" id="list-C3" role="tabpanel" aria-labelledby="list-C3-list"> Phasellus auctor, odio vel cursus tempor, elit augue blandit elit, in porttitor enim ligula eget lectus. Donec vulputate tellus nec nisl blandit, nec rhoncus mi tincidunt. In tincidunt, metus eu fermentum eleifend, quam erat ultricies urna, ut ultrices est augue quis dui.</div>
+					<div class="tab-pane fade" id="list-C4" role="tabpanel" aria-labelledby="list-C4-list">Proin tempor diam a tortor tristique malesuada. Pellentesque sit amet justo vitae massa vestibulum rutrum faucibus et mi. In lobortis malesuada felis. Aliquam nec ante vel neque tempus lobortis eget id neque.</div>
+				</div>
+			</div>
+		</div>
+		<!--END-->
+			<!-- <div class="row">
+				<div class="col-4">
+					<div class="list-group" id="list-tab" role="tablist">
 
+						<li class="list-group-item"> <h1>A</h1></li>
+						<a class="list-group-item list-group-item-action active" id="list-A1-list" data-toggle="list" href="#list-A1" role="tab" aria-controls="A1">Department</a>
+						<a class="list-group-item list-group-item-action" id="list-A2-list" data-toggle="list" href="#list-A2" role="tab" aria-controls="A2">Department</a>
+						<a class="list-group-item list-group-item-action" id="list-A3-list" data-toggle="list" href="#list-A3" role="tab" aria-controls="A3">Department</a>
+						<a class="list-group-item list-group-item-action" id="list-A4-list" data-toggle="list" href="#list-A4" role="tab" aria-controls="A4">Department</a>
+						<li class="list-group-item"> <h1>B</h1></li>
+						<a class="list-group-item list-group-item-action" id="list-B1-list" data-toggle="list" href="#list-B1" role="tab" aria-controls="B1">Department</a>
+						<a class="list-group-item list-group-item-action" id="list-B2-list" data-toggle="list" href="#list-A2" role="tab" aria-controls="B2">Department</a>
+						<a class="list-group-item list-group-item-action" id="list-B3-list" data-toggle="list" href="#list-B3" role="tab" aria-controls="B3">Department</a>
+						<a class="list-group-item list-group-item-action" id="list-B4-list" data-toggle="list" href="#list-B4" role="tab" aria-controls="B4">Department</a>
+						<li class="list-group-item"> <h1>C</h1></li>
+						<a class="list-group-item list-group-item-action" id="list-C1-list" data-toggle="list" href="#list-C1" role="tab" aria-controls="C1">Department</a>
+						<a class="list-group-item list-group-item-action" id="list-C2-list" data-toggle="list" href="#list-C2" role="tab" aria-controls="C2">Department</a>
+						<a class="list-group-item list-group-item-action" id="list-C3-list" data-toggle="list" href="#list-C3" role="tab" aria-controls="C3">Department</a>
+						<a class="list-group-item list-group-item-action" id="list-C4-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="C4">Department</a>
+					</div>
+				</div>
+				<div class="col-8">
+					<div class="tab-content" id="nav-tabContent">
+						<div class="tab-pane fade show active" id="list-A1" role="tabpanel" aria-labelledby="list-A1-list">Nulla tempor nisl a tellus molestie, vitae tempus erat tincidunt. Cras pharetra, odio nec tincidunt ultricies, purus enim fringilla risus, vel commodo tellus dui vehicula libero.</div>
+						<div class="tab-pane fade" id="list-A2" role="tabpanel" aria-labelledby="list-A2-list">Pellentesque quam lectus, aliquam quis ligula id, molestie pellentesque dolor. Suspendisse potenti. Sed lacinia, nisi non posuere finibus, magna justo euismod augue, vitae tincidunt massa enim nec lacus. Nullam dapibus aliquet luctus.</div>
+						<div class="tab-pane fade" id="list-A3" role="tabpanel" aria-labelledby="list-A3-list"> Phasellus auctor, odio vel cursus tempor, elit augue blandit elit, in porttitor enim ligula eget lectus. Donec vulputate tellus nec nisl blandit, nec rhoncus mi tincidunt. In tincidunt, metus eu fermentum eleifend, quam erat ultricies urna, ut ultrices est augue quis dui.</div>
+						<div class="tab-pane fade" id="list-A4" role="tabpanel" aria-labelledby="list-A4-list">Proin tempor diam a tortor tristique malesuada. Pellentesque sit amet justo vitae massa vestibulum rutrum faucibus et mi. In lobortis malesuada felis. Aliquam nec ante vel neque tempus lobortis eget id neque.</div>
+						<div class="tab-pane fade" id="list-B1" role="tabpanel" aria-labelledby="list-B1-list">Overview.......</div>
+						<div class="tab-pane fade" id="list-B2" role="tabpanel" aria-labelledby="list-B2-list">Pellentesque quam lectus, aliquam quis ligula id, molestie pellentesque dolor. Suspendisse potenti. Sed lacinia, nisi non posuere finibus, magna justo euismod augue, vitae tincidunt massa enim nec lacus. Nullam dapibus aliquet luctus.</div>
+						<div class="tab-pane fade" id="list-B3" role="tabpanel" aria-labelledby="list-B3-list"> Phasellus auctor, odio vel cursus tempor, elit augue blandit elit, in porttitor enim ligula eget lectus. Donec vulputate tellus nec nisl blandit, nec rhoncus mi tincidunt. In tincidunt, metus eu fermentum eleifend, quam erat ultricies urna, ut ultrices est augue quis dui.</div>
+						<div class="tab-pane fade" id="list-B4" role="tabpanel" aria-labelledby="list-B4-list">Proin tempor diam a tortor tristique malesuada. Pellentesque sit amet justo vitae massa vestibulum rutrum faucibus et mi. In lobortis malesuada felis. Aliquam nec ante vel neque tempus lobortis eget id neque.</div>
+						<div class="tab-pane fade" id="list-C1" role="tabpanel" aria-labelledby="list-C1-list">Nulla tempor nisl a tellus molestie, vitae tempus erat tincidunt. Cras pharetra, odio nec tincidunt ultricies, purus enim fringilla risus, vel commodo tellus dui vehicula libero.</div>
+						<div class="tab-pane fade" id="list-C2" role="tabpanel" aria-labelledby="list-C2-list">Pellentesque quam lectus, aliquam quis ligula id, molestie pellentesque dolor. Suspendisse potenti. Sed lacinia, nisi non posuere finibus, magna justo euismod augue, vitae tincidunt massa enim nec lacus. Nullam dapibus aliquet luctus.</div>
+						<div class="tab-pane fade" id="list-C3" role="tabpanel" aria-labelledby="list-C3-list"> Phasellus auctor, odio vel cursus tempor, elit augue blandit elit, in porttitor enim ligula eget lectus. Donec vulputate tellus nec nisl blandit, nec rhoncus mi tincidunt. In tincidunt, metus eu fermentum eleifend, quam erat ultricies urna, ut ultrices est augue quis dui.</div>
+						<div class="tab-pane fade" id="list-C4" role="tabpanel" aria-labelledby="list-C4-list">Proin tempor diam a tortor tristique malesuada. Pellentesque sit amet justo vitae massa vestibulum rutrum faucibus et mi. In lobortis malesuada felis. Aliquam nec ante vel neque tempus lobortis eget id neque.</div>
+					</div>
 
+				</div>
+			</div> -->
+		</div>
 
+		<br>
+		<br>
+		<br>
 
+		<footer id="myFooter">
+			<hr class="featurette-divider">
+			<br>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-4 text-center">
+						<h5>HealthCare System</h5>
+						<p>
+							Building Number,Street
+							Subdivision, Baranggay
+							City,Province
+							Country, Zip Code
+						</p>
+					</div>
+					<div class="col-lg-4 text-center">
+						<p>Contact Number</p>
+						<p>Direct Line</p>
+						<p>Fax Number</p>
+					</div>
+					<div class="col-lg-4 text-center">
+						<div class="social-networks">
+							<a href="#" style="color: #48AAE6"><i class="fab fa-twitter fa-2x"></i></a> &nbsp;
+							<a href="#" style="color: #4267b2"><i class="fab fa-facebook-f fa-2x"></i></a> &nbsp;
+							<a href="#" style="color: #dd4b39"><i class="fab fa-google-plus-g fa-2x"></i></a>
+						</div>
+					</div>
+				</div>
+				<br>
+				<div class="mx-auto" style="width: 200px;">
+					<div class="footer-copyright">
+						<p>© 2016 Copyright Text </p>
+					</div>
+				</div>
+			</div>
+		</footer>
 
-	<!-- jQuery library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<!-- jQuery library -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-	<!-- Popper JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+		<!-- Popper JS -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
-	<!-- Latest compiled JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+		<!-- Latest compiled JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-
-</body>
-</html>
+		<script type="text/javascript">
+			
+		</script>
+	</body>
+	</html>
