--- a/contact.html
+++ b/contact.html
@@ -5,18 +5,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<link rel="icon" href="../../../../favicon.ico">
 
 	<title>Contact Us</title>
 
 
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="css/app.css">
 </head>
 <body>
-
 	<header>
-		<nav class="navbar navbar-expand-md navbar-light fixed-top bg-primary">
+		<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
 			<a class="navbar-brand" href="index.html">Healthcare System</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -26,124 +26,151 @@
 					<li class="nav-item active">
 						<a class="nav-link" href="about-us.html">About Us <span class="sr-only">(current)</span></a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item active">
 						<a class="nav-link" href="ds.html">Departments and Services</a>
 					</li>
-					<li class="nav-item">
+					<li class="nav-item active">
 						<a class="nav-link disabled" href="contact.html">Contact Us</a>
 					</li>
 				</ul>
 				<form class="form-inline mt-2 mt-md-0">
 					<input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+					<button class="btn btn-btn-info my-2 my-sm-0" type="submit">Search</button>
 				</form>
 			</div>
 		</nav>
 	</header>
-
 	<br>
 	<br>
 	<br>
 	<br>
 
 
-	<div>
-		<div class="container">
+	<div class="container">
 
-			<br>
-			<div class="well well-sm search-container">
-				<h4>Send us a message</h4>
-			</ul>
-			<div class="row">
-				<input type="hidden" name="type" value="local">
-				<div class="col-md-4 form-group">
-					<label for="fullname">Full Name</label>
-					<input id="fullname" required="" type="text" class="form-control" name="fullname" placeholder="Type Full Name">
-				</div>
-				<div class="col-md-4 form-group">
-					<label for="email">Email</label>
-					<input id="email" required="" data-parsley-type="email" data-parsley-trigger="change" type="email" class="form-control" name="email" placeholder="Type Email">
-				</div>
-				<div class="col-md-4 form-group">
-					<label for="mobile">Contact Number</label>
-					<input required="" type="text" class="form-control" name="mobile" placeholder="Type Contact Number" data-parsley-trigger="keyup" data-parsley-required="" data-parsley-pattern="^[- +()]*[0-9][- +()0-9]*$">
+		<form>
+			<div class="w-100 p-3" style="background-color: #eee;">
+				<br>
+				<div class="well well-sm search-container">
+					<h4>Send us a message</h4>
+					<div class="row">
+						<input type="hidden" name="type" value="local">
+						<div class="col-md-4 form-group">
+							<label for="fullname">Full Name</label>
+							<input id="fullname" required="" type="text" class="form-control" name="fullname" placeholder="Type Full Name">
+						</div>
+						<div class="col-md-4 form-group">
+							<label for="email">Email</label>
+							<input id="email" required="" data-parsley-type="email" data-parsley-trigger="change" type="email" class="form-control" name="email" placeholder="Type Email">
+						</div>
+						<div class="col-md-4 form-group">
+							<label for="mobile">Contact Number</label>
+							<input required="" type="text" class="form-control" name="mobile" placeholder="Type Contact Number" data-parsley-trigger="keyup" data-parsley-required="" data-parsley-pattern="^[- +()]*[0-9][- +()0-9]*$">
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-md-12">
+							<label>Message</label>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12 form-group">
+							<textarea required="" name="message" class="form-control" rows="5" placeholder="Type Message"></textarea>
+						</div>
+					</div>
+
+					<button class="btn btn-primary" type="submit">Submit form</button>
 				</div>
 			</div>
-
-			<div class="row">
-				<div class="col-md-12">
-					<label>Message</label>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-12 form-group">
-					<textarea required="" name="message" class="form-control" rows="5" placeholder="Type Message"></textarea>
-				</div>
-			</div>
-
-			<button class="btn btn-primary" type="submit">Submit form</button>
 		</form>
+	</div>
+	<br>
+	<br>
+	<br>
+
+	<div class="container">
+		<div class="w-100 p-3" style="background-color: #eee;">
+			<section class="section pb-5">
+
+
+				<h2 class="section-heading h1 pt-4">Contact Us</h2>
+
+				<p class="section-description pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam.</p>
+
+				<div class="row">
+					<div class="col-lg-5 mb-4">
+						<div class="card">
+							<div class="card-body">
+								<div class="form-header blue accent-1">
+									<h3><i class="fa fa-envelope"></i> HEALTHCARE SYSTEM</h3>
+								</div>
+								<div class="md-form">
+									<p>Location</p>
+									<p>Contact</p>
+									<p>Email</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div id="map" style="width:600px;height:400px">
+
+						<script>
+							function myMap() {
+								var mapOptions = {
+									center: new google.maps.LatLng(51.5, -0.12),
+									zoom: 10,
+									mapTypeId: google.maps.MapTypeId.HYBRID
+								}
+								var map = new google.maps.Map(document.getElementById("map"), mapOptions);
+							}
+						</script>
+
+						<script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
+					</div>
+				</div>
+			</section>
+		</div>
 	</div>
 
 	<br>
 	<br>
 	<br>
-
-
-	<!--Section: Contact v.1-->
-	<section class="section pb-5">
-
-		<!--Section heading-->
-		<h2 class="section-heading h1 pt-4">Contact Us</h2>
-		<!--Section description-->
-		<p class="section-description pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam.</p>
-
-		<div class="row">
-
-			<!--Grid column-->
-			<div class="col-lg-5 mb-4">
-
-				<!--Form with header-->
-				<div class="card">
-
-					<div class="card-body">
-						<!--Header-->
-						<div class="form-header blue accent-1">
-							<h3><i class="fa fa-envelope"></i> HEALTHCARE SYSTEM</h3>
-						</div>
-						<div class="md-form">
-							<p>Location</p>
-							<p>Contact</p>
-							<p>Email</p>
-						</div>
-					</div>
-
+	<footer id="myFooter">
+		<hr class="featurette-divider">
+		<br>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-4 text-center">
+					<h5>HealthCare System</h5>
+					<p>
+						Building Number,Street
+						Subdivision, Baranggay
+						City,Province
+						Country, Zip Code
+					</p>
 				</div>
-				<!--Form with header-->
-
+				<div class="col-lg-4 text-center">
+					<p>Contact Number</p>
+					<p>Direct Line</p>
+					<p>Fax Number</p>
+				</div>
+				<div class="col-lg-4 text-center">
+					<div class="social-networks">
+						<a href="#" style="color: #48AAE6"><i class="fab fa-twitter fa-2x"></i></a> &nbsp;
+						<a href="#" style="color: #4267b2"><i class="fab fa-facebook-f fa-2x"></i></a> &nbsp;
+						<a href="#" style="color: #dd4b39"><i class="fab fa-google-plus-g fa-2x"></i></a>
+					</div>
+				</div>
 			</div>
-			<!--Grid column-->
-
-			<!--Grid column-->
-			<div class="col-lg-7">
-
-				<!--Google map-->
-				<div id="map-container-7" class="z-depth-1-half map-container" style="height: 400px"></div>
-
-				<br>
-
+			<br>
+			<div class="mx-auto" style="width: 200px;">
+				<div class="footer-copyright">
+					<p>© 2016 Copyright Text </p>
+				</div>
 			</div>
-			<!--Grid column-->
-
 		</div>
-
-	</section>
-	<!--Section: Contact v.1-->
-
-	<!--Google Maps-->
-	<script src="https://maps.google.com/maps/api/js"></script>
-
-
+	</footer>
 	<!-- jQuery library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
