--- a/about-us.html
+++ b/about-us.html
@@ -16,30 +16,30 @@
 </head>
 <body>
 	<header>
-		<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
-			<a class="navbar-brand" href="index.html">Healthcare System</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarCollapse">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="about-us.html">About Us <span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="ds.html">Departments and Services</a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link disabled" href="contact.html">Contact Us</a>
-					</li>
-				</ul>
-				<form class="form-inline mt-2 mt-md-0">
-					<input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-					<button class="btn btn-btn-info my-2 my-sm-0" type="submit">Search</button>
-				</form>
-			</div>
-		</nav>
-	</header>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
+      <a class="navbar-brand" href="index.html"><h3><strong>Healthcare System</strong></h3></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="about-us.html"><strong>About Us</strong> <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="ds.html"><strong>Departments and Services</strong></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="contact.html"><strong>Contact Us</strong></a>
+          </li>
+        </ul>
+        <form class="form-inline mt-2 mt-md-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-btn-info my-2 my-sm-0" type="submit"><strong>Search</strong></button>
+        </form>
+      </div>
+    </nav>
+  </header>
 
 	
 	<div class="row">
@@ -56,7 +56,7 @@
 	<div class="container">
 		<div class="section-header text-center">
 			<h1>
-				ABOUT US
+				<strong>ABOUT US</strong>
 			</h1>
 			<br>
 
@@ -183,10 +183,10 @@
     </div>
 <br>
 <br>
-<br>
+
     <div class="container">
       <div class="copyright text-center">
-        © Copyright <strong>BizPage</strong>. All Rights Reserved
+        © Copyright. All Rights Reserved
       </div>
     </div>
   </footer>
