--- a/ds.html
+++ b/ds.html
@@ -15,33 +15,33 @@
 	<link rel="stylesheet" type="text/css" href="css/app.css">
 </head>
 <body>
-	<div>
+
 		<header>
-			<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
-				<a class="navbar-brand" href="index.html">Healthcare System</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarCollapse">
-					<ul class="navbar-nav mr-auto">
-						<li class="nav-item active">
-							<a class="nav-link" href="about-us.html">About Us <span class="sr-only">(current)</span></a>
-						</li>
-						<li class="nav-item active">
-							<a class="nav-link" href="ds.html">Departments and Services</a>
-						</li>
-						<li class="nav-item active">
-							<a class="nav-link disabled" href="contact.html">Contact Us</a>
-						</li>
-					</ul>
-					<form class="form-inline mt-2 mt-md-0">
-						<input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-						<button class="btn btn-btn-info my-2 my-sm-0" type="submit">Search</button>
-					</form>
-				</div>
-			</nav>
-		</header>
-	</div>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
+      <a class="navbar-brand" href="index.html"><h3><strong>Healthcare System</strong></h3></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="about-us.html"><strong>About Us</strong> <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="ds.html"><strong>Departments and Services</strong></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="contact.html"><strong>Contact Us</strong></a>
+          </li>
+        </ul>
+        <form class="form-inline mt-2 mt-md-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-btn-info my-2 my-sm-0" type="submit"><strong>Search</strong></button>
+        </form>
+      </div>
+    </nav>
+  </header>
+	
 	<br>
 	<br>
 	<br>
@@ -57,12 +57,12 @@
 		<div class="row">
 			<div class="col-4">
 				
-				<div id="accordion">
-					<div class="list-group" id="list-tab" role="tablist">
+					<div id="accordion">
+						<div class="list-group" id="list-tab" role="tablist">
 						<div class="card">
 							<div class="card-header" id="headingOne">
 								<h5 class="mb-0">
-									<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+									<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
 										A
 									</button>
 								</h5>
@@ -111,15 +111,15 @@
 								</div>
 							</div>
 						</div>
+						</div>
 					</div>
-				</div>
 
 				
 
 			</div>
 			<div class="col-8">
 				<div class="tab-content" id="nav-tabContent">
-					<div class="tab-pane fade show active" id="list-A1" role="tabpanel" aria-labelledby="list-A1-list">Nulla tempor nisl a tellus molestie, vitae tempus erat tincidunt. Cras pharetra, odio nec tincidunt ultricies, purus enim fringilla risus, vel commodo tellus dui vehicula libero.</div>
+					<div class="tab-pane fade" id="list-A1" role="tabpanel" aria-labelledby="list-A1-list">Nulla tempor nisl a tellus molestie, vitae tempus erat tincidunt. Cras pharetra, odio nec tincidunt ultricies, purus enim fringilla risus, vel commodo tellus dui vehicula libero.</div>
 					<div class="tab-pane fade" id="list-A2" role="tabpanel" aria-labelledby="list-A2-list">Pellentesque quam lectus, aliquam quis ligula id, molestie pellentesque dolor. Suspendisse potenti. Sed lacinia, nisi non posuere finibus, magna justo euismod augue, vitae tincidunt massa enim nec lacus. Nullam dapibus aliquet luctus.</div>
 					<div class="tab-pane fade" id="list-A3" role="tabpanel" aria-labelledby="list-A3-list"> Phasellus auctor, odio vel cursus tempor, elit augue blandit elit, in porttitor enim ligula eget lectus. Donec vulputate tellus nec nisl blandit, nec rhoncus mi tincidunt. In tincidunt, metus eu fermentum eleifend, quam erat ultricies urna, ut ultrices est augue quis dui.</div>
 					<div class="tab-pane fade" id="list-A4" role="tabpanel" aria-labelledby="list-A4-list">Proin tempor diam a tortor tristique malesuada. Pellentesque sit amet justo vitae massa vestibulum rutrum faucibus et mi. In lobortis malesuada felis. Aliquam nec ante vel neque tempus lobortis eget id neque.</div>
@@ -180,7 +180,7 @@
 		<br>
 		<br>
 
-  <footer id="footer">
+		<footer id="footer">
     <div class="footer-top">
       <div class="container">
         <div class="row">
@@ -222,10 +222,10 @@
     </div>
 <br>
 <br>
-<br>
+
     <div class="container">
       <div class="copyright text-center">
-        © Copyright <strong>BizPage</strong>. All Rights Reserved
+        © Copyright. All Rights Reserved
       </div>
     </div>
   </footer>
@@ -239,8 +239,5 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-<script type="text/javascript">
-
-</script>
 </body>
 </html>
