--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
 
   <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
-      <a class="navbar-brand" href="index.html">Healthcare System</a>
+      <a class="navbar-brand" href="index.html"><h3><strong>Healthcare System</strong></h3></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="about-us.html">About Us <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="about-us.html"><strong>About Us</strong> <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="ds.html">Departments and Services</a>
+            <a class="nav-link" href="ds.html"><strong>Departments and Services</strong></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="contact.html">Contact Us</a>
+            <a class="nav-link" href="contact.html"><strong>Contact Us</strong></a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-btn-info my-2 my-sm-0" type="submit">Search</button>
+          <button class="btn btn-btn-info my-2 my-sm-0" type="submit"><strong>Search</strong></button>
         </form>
       </div>
     </nav>
@@ -53,15 +53,15 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="first-slide" src="images\e.jpg" style="width: 100% !important" alt="First slide">
+        <img class="first-slide" src="images\10824.jpg" style="width: 100% !important" alt="First slide">
 
       </div>
       <div class="carousel-item">
-        <img class="second-slide" src="images\23.jpg" style="width: 100% !important" alt="Second slide">
+        <img class="second-slide" src="images\11470.jpg" style="width: 100% !important" alt="Second slide">
 
       </div>
       <div class="carousel-item">
-        <img class="third-slide" src="images\h.jpg" style="width: 100% !important" alt="Third slide">
+        <img class="third-slide" src="images\11455.jpg" style="width: 100% !important" alt="Third slide">
 
       </div>
       <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
@@ -80,7 +80,7 @@
   <div class="container">
    <br>
    <div class="well well-sm search-container">
-     <h4>FIND A DOCTOR</h4>
+     <h4><strong>FIND A DOCTOR</strong></h4>
      <form>
       <div class="form-row">
         <div class="col-md-4">
@@ -116,82 +116,70 @@
 <br>
 <br>
 <br>
-<br>
+
+<!-- <div class="owl-demo">
+          
+  <div class="item"><img src="images\10687.jpg" alt="Responsive image"></div>
+  <div class="item"><img src="images\11445.jpg" alt="Responsive image"></div>
+  <div class="item"><img src="images\11472.jpg" alt="Responsive image"></div>
+  <div class="item"><img src="images\11445.jpg" alt="Responsive image"></div>
+  <div class="item"><img src="images\10687.jpg" alt="Responsive image"></div>
+  <div class="item"><img src="images\11472.jpg" alt="Responsive image"></div>
+  <div class="item"><img src="images\11445.jpg" alt="Responsive image"></div>
+  <div class="item"><img src="images\10687.jpg" alt="Responsive image"></div>
+ 
+</div> -->
 
 <div class="container">
-<div class="owl-carousel">
-    <div class="col-md-4 text-center">
-      <img class="rounded-circle" src="images\10687.jpg" alt="Generic placeholder image" width="500" height="140">
-      <br>
-      <h5>Chairman</h5>
 
+  <div class="owl-carousel owl-theme">
+    <div class="item"><img class="img-fluid" src="images\10687.jpg" alt="Responsive image">
+      <div class="text-center"
+      <h6>CHAIRMAN</h6>
     </div>
-    <div class="col-md-4 text-center">
-      <img class="rounded-circle" src="images\11445.jpg" alt="Generic placeholder image" width="500" height="140">
-      <br>
-      <h5>President</h5>
-
-    </div>
-    <div class="col-md-4 text-center">
-      <img class="rounded-circle" src="images\11472.jpg" alt="Generic placeholder image" width="500" height="140">
-      <br>
-      <h5>Vice President</h5>
-    </div>
-
-<div class="col-md-4 text-center">
-      <img class="rounded-circle" src="images\11445.jpg" alt="Generic placeholder image" width="500" height="140">
-      <br>
-      <h5>President</h5>
-
-    </div>
-    <div class="col-md-4 text-center">
-      <img class="rounded-circle" src="images\11472.jpg" alt="Generic placeholder image" width="500" height="140">
-      <br>
-      <h5>Vice President</h5>
-    </div>
-     <div class="col-md-4 text-center">
-      <img class="rounded-circle" src="images\10687.jpg" alt="Generic placeholder image" width="500" height="140">
-      <h5>Chairman</h5>
-
-    </div>
-
-</div>
-</div>
-
-<!--<div class="container">
-
-  <div class="form-row">
-    <div class="col-lg-4 text-center">
-      <img class="rounded-circle" src="images\10687.jpg" alt="Generic placeholder image" width="140" height="140">
-      <br>
-      <h3>Chairman</h3>
-
-    </div>
-    <div class="col-lg-4 text-center">
-      <img class="rounded-circle" src="images\11445.jpg" alt="Generic placeholder image" width="140" height="140">
-      <br>
-      <h3>President</h3>
-
-    </div>
-    <div class="col-lg-4 text-center">
-      <img class="rounded-circle" src="images\11497.jpg" alt="Generic placeholder image" width="140" height="140">
-      <br>
-      <h3>Vice President</h3>
-      <br>
-      <div class="col align-self-end">
-        <p><a class="btn btn-primary" href="#" role="button">View More &raquo;</a></p>
-
-      </div>
-    </div>
-
-
+  </div>
+  <div class="item"><img class="img-fluid" src="images\11445.jpg" alt="Responsive image">
+    <div class="text-center"
+    <h6>PRESIDENT</h6>
   </div>
 </div>
-<br>
-<br> -->
+<div class="item"><img class="img-fluid" src="images\11504.jpg" alt="Responsive image">
+  <div class="text-center"
+  <h6>CHIEF FINANCIAL OFFICER</h6>
+</div>
+</div>
+<div class="item"><img class="img-fluid" src="images\11445.jpg" alt="Responsive image">
+  <div class="text-center"
+  <h6>EXECUTIVE VICE PRESIDENT</h6>
+</div>
+</div>
+<div class="item"><img class="img-fluid" src="images\10687.jpg" alt="Responsive image">
+  <div class="text-center"
+  <h6>SENIOR VICE PRESIDENT</h6>
+</div>
+</div>
+<div class="item"><img class="img-fluid" src="images\11504.jpg" alt="Responsive image">
+  <div class="text-center"
+  <h6>CHIEF MEDICAL INFORMATION OFFICER</h6>
+</div>
+</div>
+<div class="item"><img class="img-fluid" src="images\11445.jpg" alt="Responsive image">
+  <div class="text-center"
+  <h6>ASSISTANT HEAD</h6>
+</div>
+</div>
+<div class="item"><img class="img-fluid" src="images\10687.jpg" alt="Responsive image">
+  <div class="text-center"
+  <h6>MEDICAL SECRETARY</h6>
+</div>
+</div>
+</div>
+</div>
+
+
+
+
 <!-- START THE FEATURETTES -->
-<br>
-<br>
 <br>
 <br>
 <br>
@@ -202,7 +190,7 @@
  <div class="latest-news-inner-container">
 
    <center>
-    <h4 class="title">LATEST NEWS</h4>
+    <h4 class="title"><strong>LATEST NEWS</strong></h4>
   </center>
 
   <!-- / 1st title row -->
@@ -216,32 +204,30 @@
         <h5 class="text-center"> News 1</h5></a>
         <p> It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. </p>
       </div>
-  </div>
-  <div class="col-md-4">
-    <a class="title-wrapper app-blue" href="#">
-     <div class="caption">
-      <h5 class="text-center"> News 2</h5></a>
-      <p> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. </p>
     </div>
-</div> 
-<div class="col-md-4">
-  <a class="title-wrapper app-blue" href="#">
-   <div class="caption">
-    <h5 class="text-center"> News 3</h5></a>
-    <p> Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. </p>
+    <div class="col-md-4">
+      <a class="title-wrapper app-blue" href="#">
+       <div class="caption">
+        <h5 class="text-center"> News 2</h5></a>
+        <p> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. </p>
+      </div>
+    </div> 
+    <div class="col-md-4">
+      <a class="title-wrapper app-blue" href="#">
+       <div class="caption">
+        <h5 class="text-center"> News 3</h5></a>
+        <p> Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. </p>
+      </div>
+    </div>
+    <div class="col align-right">
+      <p><a class="btn btn-primary" href="#" role="button">See More &raquo;</a></p>
+    </div>
   </div>
-</div>
-<div class="col align-right">
-  <p><a class="btn btn-primary" href="#" role="button">See More &raquo;</a></p>
-</div>
-</div>
-<!-- / 2nd row -->
+  <!-- / 2nd row -->
 </div>
 </div>
 
 
-<br>
-<br>
 <br>
 <br>
 <br>
@@ -254,7 +240,7 @@
  <div class="health-articles-inner-container">
 
    <center>
-    <h4 class="title">HEALTH ARTICLES</h4>
+    <h4 class="title"><strong>HEALTH ARTICLES</strong></h4>
   </center>
 
   <!-- / 1st title row -->
@@ -308,6 +294,7 @@
 
 <!-- START -->
 
+
 <footer id="footer">
   <div class="footer-top">
     <div class="container">
@@ -350,53 +337,14 @@
   </div>
   <br>
   <br>
-  <br>
+  
   <div class="container">
     <div class="copyright text-center">
-      © Copyright <strong>BizPage</strong>. All Rights Reserved
+      © Copyright. All Rights Reserved
     </div>
   </div>
 </footer>
 
-
-<!-- END -->
-
-
-<!--footer id="myFooter">
-  <hr class="featurette-divider">
-  <br>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-4 text-center">
-        <h5>HealthCare System</h5>
-        <p>
-          Building Number,Street
-          Subdivision, Baranggay
-          City,Province
-          Country, Zip Code
-        </p>
-      </div>
-      <div class="col-lg-4 text-center">
-        <p>Contact Number</p>
-        <p>Direct Line</p>
-        <p>Fax Number</p>
-      </div>
-      <div class="col-lg-4 text-center">
-        <div class="social-networks">
-          <a href="#" style="color: #48AAE6"><i class="fab fa-twitter fa-2x"></i></a> &nbsp;
-          <a href="#" style="color: #4267b2"><i class="fab fa-facebook-f fa-2x"></i></a> &nbsp;
-          <a href="#" style="color: #dd4b39"><i class="fab fa-google-plus-g fa-2x"></i></a>
-        </div>
-      </div>
-    </div>
-    <br>
-    <div class="mx-auto" style="width: 200px;">
-      <div class="footer-copyright">
-        <p>© 2016 Copyright Text </p>
-      </div>
-    </div>
-  </div>
-</footer>-->
 
 <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
